--- a/public/quimica/gamecontroller.html
+++ b/public/quimica/gamecontroller.html
@@ -14,7 +14,10 @@
         import { ControllerAPI } from 'http://localhost:3000/quimica/apis/gameapi.js';
         const controle = new ControllerAPI();
         controle.onReady((device_id)=>{
-          controle.sendMessage(device_id,{action:'start',player:{nome:'hehe hehe',tipo:'boy boy'}});
+          console.log(device_id);
+          controle.onPlayerDisconnected((player_id)=>{
+            console.log(`PLAYER {${player_id}} DISCONECTADO`);
+          })
         });
       </script>
   </body>
