🚥🍅 Checkpoint ./Views/screen.html:8798828/397 ./public/quimica/gameviewer.html:8798828/49 ./public/quimica/screen/game.js:8798828/21 ./public/quimica/js/popup.js:8798828/61 ./public/quimica/controller/index.js:8798828/1033 ./Views/controller.html:8798828/2

--- a/public/quimica/gameviewer.html
+++ b/public/quimica/gameviewer.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <script src ="/quimica/apis/phaser.min.js"></script>
-    <!-- <script type="module" src = "/quimica/screen/game.js"></script> -->
+    <script type="module" src = "/quimica/screen/game.js"></script>
     <script type="module">
-    	import { ScreenAPI } from 'http://localhost:3000/quimica/apis/gameapi.js';
+    	import { ScreenAPI } from 'https://airgames.tk/quimica/apis/gameapi.js';
         const controle = new ScreenAPI();
         controle.onReady((device_id)=>{
           controle.onPlayerDisconnected((player_id)=>{
