🐝📅 Checkpoint ./public/quimica/js/fullscreen.js:8798828/1852 ./Views/screen.html:8798828/281 ./Views/controller.html:8798828/440 ./public/quimica/controller/index.js:8798828/43 ./public/quimica/gamecontroller.html:8798828/576 ./public/quimica/gameviewer.html:8798828/157

--- a/public/quimica/gamecontroller.html
+++ b/public/quimica/gamecontroller.html
@@ -13,10 +13,10 @@
       <script type="module">
         import { ControllerAPI } from 'http://localhost:3000/quimica/apis/gameapi.js';
         const controle = new ControllerAPI();
-        controle.onReady((device_id)=>{
-          console.log(device_id);
-          controle.onPlayerDisconnected((player_id)=>{
-            console.log(`PLAYER {${player_id}} DISCONECTADO`);
+        controle.onReady(function(device_id){
+          const screenId = controle.getControllers().id(device_id);
+          $('button').click(function(){
+            controle.sendMessage(screenId,"Ola Mundo");
           })
         });
       </script>
