🏆✋ Checkpoint ./public/quimica/gameviewer.html:8798828/73 ./routes.js:8798828/335 ./index.js:8798828/388 ./Views/pages/play.html:8798828/1915

--- a/public/quimica/gameviewer.html
+++ b/public/quimica/gameviewer.html
@@ -13,7 +13,9 @@
     	import { ScreenAPI } from 'https://airgames.tk/quimica/apis/gameapi.js';
         const screen = new ScreenAPI();
         screen.onReady((device_id)=>{
-          screen.onMessage(player_id,msg)
+          screen.onMessage(function(player_id,msg){
+            console.log(player_id,msg);
+          })
         });
     </script>
     <div class="container">
